--- a/plugin.xml
+++ b/plugin.xml
@@ -9,8 +9,8 @@
   <description>Cordova Plugin QQSDK</description>
   <license>MIT</license>
   <keywords>cordova,qq</keywords>
-  <repo>https://github.com/iVanPan/Cordova_QQ</repo>
-  <issue>https://github.com/iVanPan/Cordova_QQ/issues</issue>
+  <repo>https://github.com/michaeltangcn/qqPluginNew</repo>
+  <issue>https://github.com/michaeltangcn/qqPluginNew/issues</issue>
 
   <preference name="QQ_APP_ID" />
 
@@ -108,7 +108,7 @@
     <framework src="libstdc++.tbd" />
     <framework src="libz.tbd" />
     <!--QQ SDK version 3.2.3-->
-    <framework src="src/ios/TencentOpenAPI.framework" custom="true" framework="true"/>
+    <!--<framework src="src/ios/TencentOpenAPI.framework" custom="true" framework="true"/>-->
     <resource-file src="src/ios/TencentOpenApi_IOS_Bundle.bundle" />
 
     <info>
